# codecrafters-code

./: .gitignore  CLAUDE.md  README.md  agents.md  config.toml  demo_commands.md  pyproject.toml  restart.sh  run.bat  run.sh  test.jq
.github/workflows/: ci.yml
app/: __init__.py  agent.py  app_logging.py  background_agent.py  bg_server.py  channel.py  cli.py  cli_agent.py  client.py  commands.py  config.py  config.toml  display.py  env.example  helper_agent.py  helpers.py  input.py  main.py  message.py  message_history.py  message_queue.py  scheduled_tasks.py  server.py  setup.py  startup.py  sys_instructions.md  telegram_channel.py  tool_calls.py
app/channels/: message.py  message_queue.py
app/cli/: cli.py  cli_agent.py
app/core/: agent.py  background_agent.py  client.py  helper_agent.py  scheduled_tasks.py  sys_instructions.md  tool_calls.py
app/infra/: app_logging.py  message_history.py  setup.py  startup.py  term_display.py
app/skills/: brainstorming.md
app/system.md/: self.md  skills.md  tool_instructions.md  user.md  workspace.md
app/tools/: bash.py  calculator.py  get_skills_dir.py  hackernews.py  read_file.py  sched_tasks_tool.py  todo.py  tool.py  tool_calls.py  web_fetch.py  web_search.py  write_file.py
app/workspace/: IMPROVEMENT_PLAN.md  (+1 more)
tests/: test_agent.py  test_background_agent.py  test_bash.py  test_client.py  test_config.py  test_display.py  test_get_skills_dir.py  test_helpers.py  test_main.py  test_read_file.py  test_startup.py  test_telegram_channel.py  test_todo.py  test_tool_calls.py  test_web_fetch.py  test_write_file.py
(+5 files in other folders)
