[project]
name = "codecrafters-claude-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "openai>=2.15.0",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "rich>=14.3.3"
]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"


