[project]
name = "codecrafters-claude-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "openai>=2.15.0",
    "requests>=2.32.5",
    "python-telegram-bot>=22.7",
    "ddgs>=9.14.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ddgs>=9.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"


